Introduce ISO3166 country list for use in rights jurisdiction

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -1,4 +1,254 @@
 en:
+  iso_3166:
+    AF: AFGHANISTAN (AF)
+    AX: ÅLAND ISLANDS (AX)
+    AL: ALBANIA (AL)
+    DZ: ALGERIA (DZ)
+    AS: AMERICAN SAMOA (AS)
+    AD: ANDORRA (AD)
+    AO: ANGOLA (AO)
+    AI: ANGUILLA (AI)
+    AQ: ANTARCTICA (AQ)
+    AG: ANTIGUA AND BARBUDA (AG)
+    AR: ARGENTINA (AR)
+    AM: ARMENIA (AM)
+    AW: ARUBA (AW)
+    AU: AUSTRALIA (AU)
+    AT: AUSTRIA (AT)
+    AZ: AZERBAIJAN (AZ)
+    BS: BAHAMAS (BS)
+    BH: BAHRAIN (BH)
+    BD: BANGLADESH (BD)
+    BB: BARBADOS (BB)
+    BY: BELARUS (BY)
+    BE: BELGIUM (BE)
+    BZ: BELIZE (BZ)
+    BJ: BENIN (BJ)
+    BM: BERMUDA (BM)
+    BT: BHUTAN (BT)
+    BO: BOLIVIA, PLURINATIONAL STATE OF (BO)
+    BQ: BONAIRE, SINT EUSTATIUS AND SABA (BQ)
+    BA: BOSNIA AND HERZEGOVINA (BA)
+    BW: BOTSWANA (BW)
+    BV: BOUVET ISLAND (BV)
+    BR: BRAZIL (BR)
+    IO: BRITISH INDIAN OCEAN TERRITORY (IO)
+    BN: BRUNEI DARUSSALAM (BN)
+    BG: BULGARIA (BG)
+    BF: BURKINA FASO (BF)
+    BI: BURUNDI (BI)
+    KH: CAMBODIA (KH)
+    CM: CAMEROON (CM)
+    CA: CANADA (CA)
+    CV: CAPE VERDE (CV)
+    KY: CAYMAN ISLANDS (KY)
+    CF: CENTRAL AFRICAN REPUBLIC (CF)
+    TD: CHAD (TD)
+    CL: CHILE (CL)
+    CN: CHINA (CN)
+    CX: CHRISTMAS ISLAND (CX)
+    CC: COCOS (KEELING) ISLANDS (CC)
+    CO: COLOMBIA (CO)
+    KM: COMOROS (KM)
+    CG: CONGO (CG)
+    CD: CONGO, THE DEMOCRATIC REPUBLIC OF THE (CD)
+    CK: COOK ISLANDS (CK)
+    CR: COSTA RICA (CR)
+    CI: CÔTE D'IVOIRE (CI)
+    HR: CROATIA (HR)
+    CU: CUBA (CU)
+    CW: CURAÇAO (CW)
+    CY: CYPRUS (CY)
+    CZ: CZECH REPUBLIC (CZ)
+    DK: DENMARK (DK)
+    DJ: DJIBOUTI (DJ)
+    DM: DOMINICA (DM)
+    DO: DOMINICAN REPUBLIC (DO)
+    EC: ECUADOR (EC)
+    EG: EGYPT (EG)
+    SV: EL SALVADOR (SV)
+    GQ: EQUATORIAL GUINEA (GQ)
+    ER: ERITREA (ER)
+    EE: ESTONIA (EE)
+    ET: ETHIOPIA (ET)
+    FK: FALKLAND ISLANDS (MALVINAS) (FK)
+    FO: FAROE ISLANDS (FO)
+    FJ: FIJI (FJ)
+    FI: FINLAND (FI)
+    FR: FRANCE (FR)
+    GF: FRENCH GUIANA (GF)
+    PF: FRENCH POLYNESIA (PF)
+    TF: FRENCH SOUTHERN TERRITORIES (TF)
+    GA: GABON (GA)
+    GM: GAMBIA (GM)
+    GE: GEORGIA (GE)
+    DE: GERMANY (DE)
+    GH: GHANA (GH)
+    GI: GIBRALTAR (GI)
+    GR: GREECE (GR)
+    GL: GREENLAND (GL)
+    GD: GRENADA (GD)
+    GP: GUADELOUPE (GP)
+    GU: GUAM (GU)
+    GT: GUATEMALA (GT)
+    GG: GUERNSEY (GG)
+    GN: GUINEA (GN)
+    GW: GUINEA-BISSAU (GW)
+    GY: GUYANA (GY)
+    HT: HAITI (HT)
+    HM: HEARD ISLAND AND MCDONALD ISLANDS (HM)
+    VA: HOLY SEE (VATICAN CITY STATE) (VA)
+    HN: HONDURAS (HN)
+    HK: HONG KONG (HK)
+    HU: HUNGARY (HU)
+    IS: ICELAND (IS)
+    IN: INDIA (IN)
+    ID: INDONESIA (ID)
+    IR: IRAN, ISLAMIC REPUBLIC OF (IR)
+    IQ: IRAQ (IQ)
+    IE: IRELAND (IE)
+    IM: ISLE OF MAN (IM)
+    IL: ISRAEL (IL)
+    IT: ITALY (IT)
+    JM: JAMAICA (JM)
+    JP: JAPAN (JP)
+    JE: JERSEY (JE)
+    JO: JORDAN (JO)
+    KZ: KAZAKHSTAN (KZ)
+    KE: KENYA (KE)
+    KI: KIRIBATI (KI)
+    KP: KOREA, DEMOCRATIC PEOPLE'S REPUBLIC OF (KP)
+    KR: KOREA, REPUBLIC OF (KR)
+    KW: KUWAIT (KW)
+    KG: KYRGYZSTAN (KG)
+    LA: LAO PEOPLE'S DEMOCRATIC REPUBLIC (LA)
+    LV: LATVIA (LV)
+    LB: LEBANON (LB)
+    LS: LESOTHO (LS)
+    LR: LIBERIA (LR)
+    LY: LIBYA (LY)
+    LI: LIECHTENSTEIN (LI)
+    LT: LITHUANIA (LT)
+    LU: LUXEMBOURG (LU)
+    MO: MACAO (MO)
+    MK: MACEDONIA, THE FORMER YUGOSLAV REPUBLIC OF (MK)
+    MG: MADAGASCAR (MG)
+    MW: MALAWI (MW)
+    MY: MALAYSIA (MY)
+    MV: MALDIVES (MV)
+    ML: MALI (ML)
+    MT: MALTA (MT)
+    MH: MARSHALL ISLANDS (MH)
+    MQ: MARTINIQUE (MQ)
+    MR: MAURITANIA (MR)
+    MU: MAURITIUS (MU)
+    YT: MAYOTTE (YT)
+    MX: MEXICO (MX)
+    FM: MICRONESIA, FEDERATED STATES OF (FM)
+    MD: MOLDOVA, REPUBLIC OF (MD)
+    MC: MONACO (MC)
+    MN: MONGOLIA (MN)
+    ME: MONTENEGRO (ME)
+    MS: MONTSERRAT (MS)
+    MA: MOROCCO (MA)
+    MZ: MOZAMBIQUE (MZ)
+    MM: MYANMAR (MM)
+    NA: NAMIBIA (NA)
+    NR: NAURU (NR)
+    NP: NEPAL (NP)
+    NL: NETHERLANDS (NL)
+    NC: NEW CALEDONIA (NC)
+    NZ: NEW ZEALAND (NZ)
+    NI: NICARAGUA (NI)
+    NE: NIGER (NE)
+    NG: NIGERIA (NG)
+    NU: NIUE (NU)
+    NF: NORFOLK ISLAND (NF)
+    MP: NORTHERN MARIANA ISLANDS (MP)
+    NO: NORWAY (NO)
+    OM: OMAN (OM)
+    PK: PAKISTAN (PK)
+    PW: PALAU (PW)
+    PS: PALESTINIAN TERRITORY, OCCUPIED (PS)
+    PA: PANAMA (PA)
+    PG: PAPUA NEW GUINEA (PG)
+    PY: PARAGUAY (PY)
+    PE: PERU (PE)
+    PH: PHILIPPINES (PH)
+    PN: PITCAIRN (PN)
+    PL: POLAND (PL)
+    PT: PORTUGAL (PT)
+    PR: PUERTO RICO (PR)
+    QA: QATAR (QA)
+    RE: RÉUNION (RE)
+    RO: ROMANIA (RO)
+    RU: RUSSIAN FEDERATION (RU)
+    RW: RWANDA (RW)
+    BL: SAINT BARTHÉLEMY (BL)
+    SH: SAINT HELENA, ASCENSION AND TRISTAN DA CUNHA (SH)
+    KN: SAINT KITTS AND NEVIS (KN)
+    LC: SAINT LUCIA (LC)
+    MF: SAINT MARTIN (FRENCH PART) (MF)
+    PM: SAINT PIERRE AND MIQUELON (PM)
+    VC: SAINT VINCENT AND THE GRENADINES (VC)
+    WS: SAMOA (WS)
+    SM: SAN MARINO (SM)
+    ST: SAO TOME AND PRINCIPE (ST)
+    SA: SAUDI ARABIA (SA)
+    SN: SENEGAL (SN)
+    RS: SERBIA (RS)
+    SC: SEYCHELLES (SC)
+    SL: SIERRA LEONE (SL)
+    SG: SINGAPORE (SG)
+    SX: SINT MAARTEN (DUTCH PART) (SX)
+    SK: SLOVAKIA (SK)
+    SI: SLOVENIA (SI)
+    SB: SOLOMON ISLANDS (SB)
+    SO: SOMALIA (SO)
+    ZA: SOUTH AFRICA (ZA)
+    GS: SOUTH GEORGIA AND THE SOUTH SANDWICH ISLANDS (GS)
+    SS: SOUTH SUDAN (SS)
+    ES: SPAIN (ES)
+    LK: SRI LANKA (LK)
+    SD: SUDAN (SD)
+    SR: SURINAME (SR)
+    SJ: SVALBARD AND JAN MAYEN (SJ)
+    SZ: SWAZILAND (SZ)
+    SE: SWEDEN (SE)
+    CH: SWITZERLAND (CH)
+    SY: SYRIAN ARAB REPUBLIC (SY)
+    TW: TAIWAN, PROVINCE OF CHINA (TW)
+    TJ: TAJIKISTAN (TJ)
+    TZ: TANZANIA, UNITED REPUBLIC OF (TZ)
+    TH: THAILAND (TH)
+    TL: TIMOR-LESTE (TL)
+    TG: TOGO (TG)
+    TK: TOKELAU (TK)
+    TO: TONGA (TO)
+    TT: TRINIDAD AND TOBAGO (TT)
+    TN: TUNISIA (TN)
+    TR: TURKEY (TR)
+    TM: TURKMENISTAN (TM)
+    TC: TURKS AND CAICOS ISLANDS (TC)
+    TV: TUVALU (TV)
+    UG: UGANDA (UG)
+    UA: UKRAINE (UA)
+    AE: UNITED ARAB EMIRATES (AE)
+    GB: UNITED KINGDOM (GB)
+    US: UNITED STATES (US)
+    UM: UNITED STATES MINOR OUTLYING ISLANDS (UM)
+    UY: URUGUAY (UY)
+    UZ: UZBEKISTAN (UZ)
+    VU: VANUATU (VU)
+    VE: VENEZUELA, BOLIVARIAN REPUBLIC OF (VE)
+    VN: VIET NAM (VN)
+    VG: VIRGIN ISLANDS, BRITISH (VG)
+    VI: VIRGIN ISLANDS, U.S. (VI)
+    WF: WALLIS AND FUTUNA (WF)
+    EH: WESTERN SAHARA (EH)
+    YE: YEMEN (YE)
+    ZM: ZAMBIA (ZM)
+    ZW: ZIMBABWE (ZW)
   language: &language_attributes
     language_aar: Afar
     language_abk: Abkhazian
