[Delivers #41484569] Show a better error message for location forms
Specifically, for this case:

  When creating a location, a minimum of one of the following is required:

    * Barcode
    * Classification
    * Coordinate 1 Label AND Coordinate 1 Indicator

I've added a first attempt at using error codes instead of plain text
strings.  It's at odds with how we've done other cases, but we'll
probably need to revisit this soon to make our error messages
i18n-able.

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -789,9 +789,15 @@ en:
     coordinate_3_label: Coordinate Label 3
     coordinate_3_indicator: Coordinate Indicator 3
     display_string: Display String
+
+    location_fields_error: >
+      You must either specify a barcode, a classification, or both a coordinate 1 label and coordinate 1 indicator
+
+
     _html:
       singular: Location
       plural: Locations
+
   container_location:
     status: Status
     status_current: Current
