Squash commits for Accession form redesign and tree tweaks.
Remove tree view from the accession form; Introduce a record-toolbar to contain the actions for the record (including edit, spawn, suppress)

Make record-pane it's on <div>; and introduce toolbar partial for all top level records;

Align toolbar btn groups to the right; fix accession selenium tests; fix flash alerts not displaying when creating a resource/digital object;

Add a message when spawning a resource; Add 'Return to ACcession' link when spawning a resource;

Move form-changed event handling into a separate javascript resource so can be used on any form

Add detect_form_changes.js resource - oops missed it

Fix tree node not change after save changes on prompt clicks (for AO update)

Add a message to indicate a tree pane is loading (disable the form while this loading is taking place

Clean up loading message for tree nodes

Don't delay loading of tree pane (show loading notice and don't block); Add padding to subject terms form panel;

Fix form_changed not set upon form error (in tree forms)

Move Finish Editing button to the top tree toolbar

Clean up tree loading message; Scroll to top unpon reverting a form

Fix a few rebase messups

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -28,6 +28,9 @@ en:
     unsuppress: Unsuppress
     unsuppress_confirm_message: Unsuppress this Accession?
     export_ead: Download EAD
+    loading: Loading...
+    revert: Revert Changes
+    finish_editing: Finish Editing
   states:
     suppressed: Suppressed
   navbar:
